// Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.ledger.api.v1;

import "com/digitalasset/ledger/api/v1/trace_context.proto";
import "com/digitalasset/ledger/api/v1/commands.proto";

import "google/protobuf/empty.proto";


option java_outer_classname = "CommandSubmissionServiceOuterClass";
option java_package = "com.digitalasset.ledger.api.v1";

// Allows clients to attempt advancing the ledger's state by submitting commands.
// The final states of their submissions are disclosed by the Command Completion Service.
// The on-ledger effects of their submissions are disclosed by the Transaction Service.
// Commands may fail in 4 distinct manners:
//
// 1) ``INVALID_PARAMETER`` gRPC error on malformed payloads and missing required fields.
// 2) Failure communicated in the gRPC error.
// 3) Failure communicated in a Completion.
// 4) A Checkpoint with ``record_time`` > command ``mrt`` arrives through the Completion Stream, and the command's Completion was not visible before. In this case the command is lost.
//
// Clients that do not receive a successful completion about their submission MUST NOT assume that it was successful.
// Clients SHOULD subscribe to the CompletionStream before starting to submit commands to prevent race conditions.
//
// Interprocess tracing of command submissions may be achieved via Zipkin by filling out the ``trace_context`` field.
// The server will return a child context of the submitted one, (or a new one if the context was missing) on both the Completion and Transaction streams.
service CommandSubmissionService {

  // Submit a single composite command.
  rpc Submit (SubmitRequest) returns (google.protobuf.Empty);

}

// The submitted commands will be processed atomically in a single transaction.
message SubmitRequest {

  // The commands to be submitted in a single transaction.
  // Required
  Commands commands = 1;

  // Server side tracing will be registered as a child of the submitted context.
  // This field is a future extension point and is currently not supported.
  // Optional
  TraceContext trace_context = 1000;
}
